--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
@@ -17,7 +19,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8081 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,6 +32,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "https://mongoexpress-milomacphail.c9users.io:8080"
+  ]
 }
